--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "vite": "^7.2.4",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@supabase/supabase-js": "^2.84.0",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0",
-    "@supabase/supabase-js": "^2.84.0",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "react": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
